k3s/tube-archivist/elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: tube-archivist-elasticsearch
  namespace: tube-archivist
spec:
  selector:
    app: tube-archivist-elasticsearch
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tube-archivist-elasticsearch
  namespace: tube-archivist
spec:
  serviceName: tube-archivist-elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: "tube-archivist-elasticsearch"
  template:
    metadata:
      labels:
        app: "tube-archivist-elasticsearch"
    spec:
      containers:
        - name: elasticsearch
          image: bbilly1/tubearchivist-es
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              cpu: "1000m"
              memory: "2Gi"
            requests:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: tube-archivist-elasticsearch
