k3s/tube-archivist/tube-archivist.yml
apiVersion: v1
kind: Service
metadata:
  name: tube-archivist
  namespace: tube-archivist
  labels:
    app: tube-archivist
spec:
  selector:
    app: tube-archivist
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tube-archivist
  namespace: tube-archivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tube-archivist
  template:
    metadata:
      labels:
        app: tube-archivist
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-node1
      containers:
        - name: tube-archivist
          image: bbilly1/tubearchivist
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /youtube
            - name: cache
              mountPath: /cache
          resources:
            limits:
              cpu: "2000m"
              memory: "2Gi"
            requests:
              cpu: "1000m"
              memory: "1Gi"
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: tube-archivist-media
        - name: cache
          persistentVolumeClaim:
            claimName: tube-archivist-cache
