k3s/tube-archivist/all.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tube-archivist
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tube-archivist
  namespace: tube-archivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tube-archivist
  template:
    metadata:
      labels:
        app: tube-archivist
    spec:
      containers:
        - name: tube-archivist
          image: bbilly1/tubearchivist
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /youtube
          resources:
            limits:
              cpu: "2"
              memory: "2G"
            requests:
              cpu: "1"
              memory: "1G"
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: tubearchivist-media
---
apiVersion: v1
kind: Service
metadata:
  name: tube-archivist
  namespace: tube-archivist
spec:
  selector:
    app: tube-archivist
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tubearchivist-ingress
  namespace: tube-archivist
  annotations:
    kubernetes.io/ingress.className: "traefik"
spec:
  rules:
    - host: "ta.lukcic.pl"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tube-archivist
                port:
                  number: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubearchivist-redis
  namespace: tube-archivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tubearchivist-redis
  template:
    metadata:
      labels:
        app: tubearchivist-redis
    spec:
      containers:
        - name: redis
          image: redis/redis-stack-server
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
      # volumes:
      #   - name: redis-data
      #     persistentVolumeClaim:
      #       claimName: tubearchivist-redis
---
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist-redis
  namespace: tube-archivist
spec:
  selector:
    app: "tubearchivist-redis"
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tubearchivist-es
  namespace: tube-archivist
spec:
  serviceName: tubearchivist-es
  replicas: 1
  selector:
    matchLabels:
      app: "tubearchivist-es"
  template:
    metadata:
      labels:
        app: "tubearchivist-es"
    spec:
      containers:
        - name: elasticsearch
          image: bbilly1/tubearchivist-es
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data
          resources:
            limits:
              cpu: "1000m"
              memory: "2Gi"
            requests:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: tubearchivist-es
---
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist-es
  namespace: tube-archivist
spec:
  selector:
    app: "tubearchivist-es"
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
  type: ClusterIP
