k3s/tube-archivist/common.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tube-archivist
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tube-archivist-ingress-https
  namespace: tube-archivist
  labels:
    app.kubernetes.io/name: tube-archivist
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - yt.lukcic.pl
      secretName: tube-archivist-lukcic-pl-ssl-cert
  rules:
    - host: yt.lukcic.pl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tube-archivist
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tube-archivist-ingress-http
  namespace: tube-archivist
  labels:
    app.kubernetes.io/name: tube-archivist
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  rules:
    - host: yt.lukcic.pl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: tube-archivist
                port:
                  number: 8000
